--- a/CallsChatSample/Base.lproj/Main.storyboard
+++ b/CallsChatSample/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="live_horizontal" translatesAutoresizingMaskIntoConstraints="NO" id="GwP-Vn-OcQ">
-                                <rect key="frame" x="139.66666666666666" y="144" width="114" height="48"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calls_horizontal" translatesAutoresizingMaskIntoConstraints="NO" id="GwP-Vn-OcQ">
+                                <rect key="frame" x="128.66666666666666" y="144" width="135.99999999999997" height="48"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ULV-KR-5hj">
                                 <rect key="frame" x="24" y="272" width="345" height="17"/>
@@ -62,7 +62,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IKt-5w-pOI">
                                 <rect key="frame" x="24" y="458" width="345" height="48"/>
-                                <color key="backgroundColor" red="0.4549019608" green="0.1764705882" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.4549019608" green="0.1764705882" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="iuQ-ip-64p"/>
                                 </constraints>
@@ -120,7 +120,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="live_horizontal" width="114" height="48"/>
+        <image name="calls_horizontal" width="136" height="48"/>
         <image name="sendbird_horizontal" width="117" height="20.333333969116211"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
